--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "mime-types": "^2.1.31",
     "uuid": "^7.0.3",
     "ws": "^7.5.1",
-    "xmldom": "^0.6.0"
+    "@xmldom/xmldom": "^0.7.0"
   },
   "devDependencies": {
     "minify": "^5.2.0",
-    "nodemon": "^1.19.4"
+    "nodemon": "^2.0.19"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
